@@ -761,6 +761,22 @@ id|COMET
 )brace
 comma
 (brace
+l_int|0x13D1
+comma
+l_int|0xAB08
+comma
+id|PCI_ANY_ID
+comma
+id|PCI_ANY_ID
+comma
+l_int|0
+comma
+l_int|0
+comma
+id|COMET
+)brace
+comma
+(brace
 l_int|0x104A
 comma
 l_int|0x0981
